srcs/ICAP_AccountService/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: icap-accountservice
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: icap-accountservice
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
